# safety-projector-interface

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  README.md  commands  create_env.sh  entrypoint.sh  icp_transform  projector_interface_example.ipynb  startup_projector
integration/: CMakeLists.txt  package.xml
integration/action/: AssemblyDetection.action  BookOperatorStaticBorder.action  BookRobotStaticBorder.action  ConfigureAR.action  ConfigureHumanDetection.action  ConfigurePayload.action  ControlAssemblyHierarchy.action  ControlRunningScheduleExecution.action  DetectObject.action  DockingSkill.action  ExecuteHumanTaskAsyncAdd.action  ExecuteHumanTaskAsyncRemove.action  ExecuteHumanTaskReferenced.action  ExecuteSkillReferenced.action  MoveCartesian.action  NavigateSkill.action  ParameterizeSkill.action  QualityInspectionProcess.action  SetHTMLInstructionsProjection.action  SetMode.action  SetSwitchInterfaceProjection.action  SpawnDynamicObject.action  StartNewScheduleExecution.action
integration/msg/: ARConfiguration.msg  ActionFeedback.msg  ActionRequest.msg  AssemblyAnimation.msg  DetectedHuman.msg  DynamicObjectAssembly.msg  EasyProgrammingToolExecutionStatus.msg  HumanIntention.msg  IOStates.msg  OperatorInstructions.msg  ProjectorTransformReference.msg  QualityInspectionResult.msg  ResourceTrackingMode.msg  RobotConfiguration.msg  ScheduleSimulationResult.msg  SimulationResourceStatus.msg  SimulationStoppedResult.msg  SwitchInterfaceProjection.msg  TaskRuntimeStatus.msg  ToolsConfiguration.msg  VirtualButtonEvent.msg  VirtualButtonReference.msg  VoiceCommand.msg
integration/srv/: ConfigureRobot.srv  ListAvailableProjectorSpaces.srv  ListPredefinedUIs.srv  UpdateAsynHumanTask.srv
src/projector_interface/: CMakeLists.txt  README.md  package.xml
src/projector_interface/launch/: server.launch
src/projector_interface/src/: book_operator_static_border_server.cpp  book_robot_static_border_server.cpp  button_color_server.cpp  button_projection_server.cpp  dynamic_border_node.cpp  instruction_projection_server.cpp  move_robot_server.cpp  projector_interface_node.cpp  projector_interface_server.cpp  release_operator_static_border_server.cpp  release_robot_static_border_server.cpp  robot_motion_node.cpp  safety_border_server.cpp  safety_depthmap.cpp  smart_interface_node.cpp  static_border_booking_node.cpp  static_border_server.cpp  unset_projection_server.cpp  user_interface_server.cpp
src/tuni_whitegoods_calibration/: CMakeLists.txt  package.xml
src/tuni_whitegoods_calibration/arucos/: extreme_values.txt
src/tuni_whitegoods_calibration/launch/: border_display_calibration.launch  robot_camera_calibration.launch  smart_interface_calibration.launch  tf.launch
src/tuni_whitegoods_calibration/scripts/: calibration.py  capture_depth_image.py  capture_rgb_image.py  compute_homography.py  define_zone.py  find_homography.py  get_depth_proj_hom.py  project_markers.py  select_point.py  select_roi.py
src/tuni_whitegoods_calibration/src/: server_points.cpp  wrapper.cpp
src/tuni_whitegoods_controller/: CMakeLists.txt  package.xml
src/tuni_whitegoods_controller/include/: projector_interface_controller.h
src/tuni_whitegoods_example_scenarios/: CMakeLists.txt  dynamic_border_test.cpp
src/tuni_whitegoods_example_scenarios/launch/: test_static_border_projection.launch
src/tuni_whitegoods_example_scenarios/scripts/: display_static_border.py  hello_world.py  static_borders.py
src/tuni_whitegoods_msgs/: CMakeLists.txt  package.xml
src/tuni_whitegoods_msgs/msg/: DynamicArea.msg  HandsState.msg
src/tuni_whitegoods_msgs/srv/: PointsDepthMap.srv  TransformPixelToProjection.srv  TransformRobotCameraCoordinates.srv
src/tuni_whitegoods_openflow_interface/: CMakeLists.txt  package.xml
src/tuni_whitegoods_openflow_interface/config/: openflow_interface_params.yaml
src/tuni_whitegoods_openflow_interface/launch/: projector_interface.launch  robot_interface.launch  server.launch
src/tuni_whitegoods_openflow_interface/src/: robot_motion_node.cpp  smart_interface_node.cpp  static_border_booking_node.cpp
src/tuni_whitegoods_perception/: CMakeLists.txt  package.xml
src/tuni_whitegoods_perception/config/: camera_serial_mapping.yaml  perception_params.yaml
src/tuni_whitegoods_perception/launch/: border_violation_tracking.launch  camera.launch  depth_interface.launch  hand_tracking.launch  interaction.launch  kinect_simple.launch  params.launch  smart_interface_interaction.launch  tf.launch  whitegoods_perception.launch  wrapper.launch
src/tuni_whitegoods_perception/scripts/: hand_tracker.py  moving_table_tracker.py
src/tuni_whitegoods_perception/src/: depth_interface.cpp  depth_interface_node.cpp  detect_interaction.cpp  (+4 more)
src/tuni_whitegoods_projector/: CMakeLists.txt  package.xml  setup.py
src/tuni_whitegoods_projector_interface/: CMakeLists.txt  package.xml
src/tuni_whitegoods_transformations/: CMakeLists.txt  package.xml
src/tuni_whitegoods_view/: CMakeLists.txt  package.xml
tuni_whitegoods_controller/: CMakeLists.txt  package.xml
tuni_whitegoods_msgs/: CMakeLists.txt  package.xml
tuni_whitegoods_msgs/msg/: DynamicArea.msg
tuni_whitegoods_msgs/srv/: Transform3DToPixel.srv  TransformMovingTable.srv  TransformPixelTo3D.srv
tuni_whitegoods_perception/: CMakeLists.txt  package.xml
tuni_whitegoods_perception/launch/: kinect_simple.launch  moving_table_tracking.launch  object_detection.launch  whitegoods_perception.launch
tuni_whitegoods_perception/scripts/: hand_tracker.py  moving_table_tracker.py
tuni_whitegoods_transformations/: CMakeLists.txt  package.xml
tuni_whitegoods_transformations/launch/: transformation_servers.launch
tuni_whitegoods_transformations/src/: transform_camera_point_server.cpp  transform_projector_point_server.cpp  transform_robot_point_server.cpp  transform_table_point_server.cpp
tuni_whitegoods_view/: CMakeLists.txt  package.xml
whitegoods_qt_gui/: CMakeLists.txt  package.xml
whitegoods_qt_gui/resource/: camera_calibration_window.ui  main_window.ui  visualization_window.ui
whitegoods_qt_gui/src/: main.cpp
(+563 files in other folders)
