<?xml version="1.0"?>
<package format="2">
  <name>integration</name>
  <version>0.1.0</version>
  <description>The integration interfaces definition package</description>

  <!-- One Maintainer tag required, multiple allowed, one person per tag -->
  
  <maintainer email="koukasspyros@gmail.com">Spyros Koukas</maintainer>

  <license>TBD</license>

  <author >Spyros Koukas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>

  


  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
